# mentat

./: Cargo.toml  LICENSE  master-plan-2000x.md
daemon/: Cargo.toml
tui/: Cargo.toml
tui/src/: main.rs
